--- a/styles.css
+++ b/styles.css
@@ -458,7 +458,7 @@ input:focus {
   }
 }
 
-/* SUPER SMALL MOBILE <=480px */
+/* SUPER SMALL MOBILE  */
 @media (max-width: 480px) {
   .app-bar h1 {
     font-size: 16px;
